# camltracing

./: .gitignore  dune-project  makefile
lib/: architecture.md  dune  image.ml  object.ml  point3.ml  ray.ml  util.ml  vec3.ml
test/: dune  img.ppm  out.ppm  ray_test.ml
